--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "./node_modules/.bin/nx build paws-and-redux",
     "serve": "./node_modules/.bin/nx serve paws-and-redux",
     "test": "./node_modules/.bin/nx run-many -t test --all",
-    "e2e": "./node_modules/.bin/nx run-many -t e2e --all"
+    "e2e": "./node_modules/.bin/nx run-many -t e2e --all",
+    "graph": "./node_modules/.bin/nx graph"
   },
   "private": true,
   "dependencies": {
